2004-04-13  Sam Steingold  <sds@gnu.org>

	sync modules/clx/mit-clx/ with CLOCC/GUI/CLX
	* link.sh (TO_LOAD): added shape and split-sequence
	* Makefile (ALLLISP, ALLFAS): ditto
	* Makefile.clisp, Makefile.gcl, README.GCL, akcl_dep.lisp:
	* build-clx.lisp, exclcmac.lisp, excldefsys.lisp, excldep.c:
	* excldep.lisp, exclMakefile, exclREADME, fix-socket.c:
	* generalock.lisp, sysdef.lisp, kcl-compiler-patches.lisp:
	* kcl-patches.lisp, kcl-system-patches.lisp, makefile.akcl:
	* ms-patch.uu, provide.lisp, sockcl.lisp, socket.c:
	* sys-package.lisp, sys-proclaim.lisp: removed
	* doc.lisp-doc: renamed to doc.lisp
	* shape.lisp, split-sequence.lisp: added
	* attributes.lisp, buffer.lisp, bufmac.lisp, clx.lisp:
	* defsystem.lisp, depdefs.lisp, dependent.lisp, describe.lisp:
	* display.lisp, fonts.lisp, gcontext.lisp, graphics.lisp:
	* image.lisp, input.lisp, keysyms.lisp, macros.lisp, manager.lisp:
	* package.lisp, requests.lisp, resource.lisp, text.lisp, trace.lisp:
	* translate.lisp: sync with CLOCC

2004-04-13  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (view-man, view-html): man pages are in doc

2004-04-04  Bruno Haible  <bruno@clisp.org>

	Compile things like (remove-if #'(lambda ...) (the list ...)) inline.
	* compiler.lisp (c-form-table): Add entries for MAP, MAP-INTO, SOME,
	EVERY, NOTANY, NOTEVERY.
	(c-MAP-on-CARs-inner): Add endp-value argument.
	(c-MAP-on-CARs, c-MAPC): Update.
	(c-NTH, c-SETNTH): Use c-GLOBAL-FUNCTION-CALL-form instead of
	c-GLOBAL-FUNCTION-CALL, to reuse the already macroexpanded subforms.
	(declared-list-form-p, c-MAP, c-MAP-INTO, c-SOME, c-EVERY, c-NOTANY)
	(c-NOTEVERY): New functions.
	(c-REMOVE-IF, c-DELETE-IF, c-SUBSTITUTE-IF, c-NSUBSTITUTE-IF)
	(c-FIND-IF, c-POSITION-IF, c-COUNT-IF): Expand inline if the sequence
	argument is declared as list. Handle the inverted case as well.
	(c-REMOVE-IF-NOT, c-DELETE-IF-NOT, c-SUBSTITUTE-IF-NOT)
	(c-NSUBSTITUTE-IF-NOT, c-FIND-IF-NOT, c-POSITION-IF-NOT)