@@ -1,5 +1,9 @@
 2004-04-04  Bruno Haible  <bruno@clisp.org>
 
+	* type.tst: Test TYPEP on a structure with user-defined :TYPE.
+
+2004-04-04  Bruno Haible  <bruno@clisp.org>
+
 	* type.tst: Test DEFSTRUCT :INITIAL-OFFSET option.
 
 2004-03-21  Bruno Haible  <bruno@clisp.org>
